Moving GameType and SeekConfig into Fics.Api and Refactoring

--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -47,6 +47,7 @@ library
                    Macbeth.Fics.Api.Api,
                    Macbeth.Fics.Api.Chat,
                    Macbeth.Fics.Api.Game,
+                   Macbeth.Fics.Api.GameType,
                    Macbeth.Fics.Api.Move,
                    Macbeth.Fics.Api.Rating,
                    Macbeth.Fics.Api.Seek,
@@ -75,7 +76,6 @@ library
                    Macbeth.Wx.Configuration,
                    Macbeth.Wx.Finger,
                    Macbeth.Wx.GamesList,
-                   Macbeth.Wx.GameType,
                    Macbeth.Wx.Login,
                    Macbeth.Wx.Match,
                    Macbeth.Wx.Pending,
