Refactoring wx login

--- a/macbeth-lib.cabal
+++ b/macbeth-lib.cabal
@@ -40,6 +40,8 @@ library
   default-extensions: 
     LambdaCase
     OverloadedStrings
+    RecordWildCards
+    DeriveGeneric
   exposed-modules: Paths,
                    Macbeth.Fics.FicsConnection
                    Macbeth.Fics.FicsMessage,
