Show Dialog before closing Macbeth #55

--- a/macbeth-wx/macbeth-wx.cabal
+++ b/macbeth-wx/macbeth-wx.cabal
@@ -79,6 +79,7 @@ library
     Macbeth.Wx.Chat
     Macbeth.Wx.ChatRegistry
     Macbeth.Wx.Commands
+    Macbeth.Wx.Dialog
     Macbeth.Wx.Configuration
     Macbeth.Wx.Finger
     Macbeth.Wx.GamesList
