Updating stack resolver 11.22, ghc 8.2.2, wx 0.92.3.0

--- a/macbeth-fics/macbeth-fics.cabal
+++ b/macbeth-fics/macbeth-fics.cabal
@@ -25,7 +25,7 @@ library
       aeson
     , async
     , attoparsec
-    , base >=4.2 && <5
+    , base
     , bytestring
     , conduit
     , conduit-extra
