#59 Giving the console command line a history that you can navigate with keyUp and keyDown

--- a/macbeth-wx/macbeth-wx.cabal
+++ b/macbeth-wx/macbeth-wx.cabal
@@ -78,6 +78,7 @@ library
     Macbeth.Wx.Challenge
     Macbeth.Wx.Chat
     Macbeth.Wx.ChatRegistry
+    Macbeth.Wx.CommandHistory
     Macbeth.Wx.Configuration
     Macbeth.Wx.Config.UserConfig
     Macbeth.Wx.Config.Sounds
