Bugfix: Locked history file

--- a/macbeth-wx/macbeth-wx.cabal
+++ b/macbeth-wx/macbeth-wx.cabal
@@ -43,8 +43,9 @@ library
     , multiset
     , MissingH
     , mtl
-    , stm
     , safe
+    , strict
+    , stm
     , time
     , text
     , transformers
